--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ SNOWLIB_HOME_DIR/*.toml
 security/
 *.log
 *-output.log
+# Exception: keep tox output log for documentation
+!build/tox_output.log
 
 dist/
 build/lib/
