--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ dev = [
     # Distribution
     "pip-licenses",
     "nbformat",
+    "nbstripout",
     # All optional dependencies
     "snowlib[sqlalchemy,snowpark,excel]",
 ]
